# goldilocks

./: .gitignore  CHECKLIST.md  CREDENTIALS.md  README.md  README.md.md  REVIEW.md  anonymiser.py  config_example.pi  config_example.py  database_connector.py  file_processor.py  json_parser.py  my_second_doc.mmd  pie.py  pyproject.toml  requirements.txt  run_neo4j.ps1  test_connection.py  test_pipeline_fetcher.py
commands/: anonymise.py  ask.py  audit.py  colours.py  doctor.py  fetch.py  graph.py  inspect_export.py  ping.py  run.py  sanitise.py  seed.py  sieve.py  stats.py  visualise.py
diagrams/: my_first_doc.mmd
goldilocks_cli/: __main__.py  cli.py
goldilocks_cli/commands/: anonymise.py  ask.py  audit.py  check.py  doctor.py  fetch.py  graph.py  init.py  ping.py  sanitise.py  seed.py  sieve.py  stats.py  status.py  visualise.py
goldilocks_cli/core/: agent.py  anonymiser.py  archive.py  config.py  credentials.py  dag_builder.py  dag_mermaid_renderer.py  dag_models.py  dag_transform.py  describer.py  diagram_builder.py  errors.py  mermaid_styles.py  models.py  output_manager.py  pipeline_fetcher.py  pipeline_menu.py  pipeline_seeder.py  renderer.py  sanitiser.py  security.py  sieveDemo.py  snap_resolver.py  snaplogic_url.py  state.py  token_analyser.py  visualisation_scale.py  visualiser.py
goldilocks_mustfix_complete/goldilocks/: .gitignore  README.md
goldilocks_mustfix_complete/goldilocks/goldilocks_cli/: __init__.py
goldilocks_mustfix_complete/goldilocks/goldilocks_cli/commands/: ask.py  audit.py  graph.py  inspect_export.py  ping.py  sanitise.py  stats.py
goldilocks_mustfix_complete/goldilocks/goldilocks_cli/core/: anonymiser.py  dag_ascii_renderer.py  dag_mermaid_renderer.py  json_parser.py
goldilocks_mustfix_complete/goldilocks/tests/: test_sieve.py
scripts/: run_neo4j.ps1
src/: JsonParser.py  SnapLogicPipelineParser.py  agent.py  anonymiser.py  dag_ascii_renderer.py  dag_builder.py  dag_mermaid_renderer.py  dag_models.py  describer.py  diagram_builder.py  json_parser.py  mermaid.styles.py  mermaid_styles.py  output_manager.py  pipeline_fetcher.py  pipeline_menu.py  pipeline_processor.py  pipeline_seeder.py  renderer.py  sanitiser,py  sanitiser.py  security.py  sieve.py  sieveDemo.py  snap_resolver.py  snaplogic_url.py  token_analyser.py  visualiser.py
tests/: conftest.py  test_agent_helpers.py  test_anonymiser.py  test_archive.py  test_ask_journey.py  test_check.py  test_connection.py  test_credentials.py  test_dag_ascii_renderer.py  test_dag_builder.py  test_dag_mermaid_renderer.py  test_dag_transform.py  test_errors.py  test_fetch.py  test_init.py  test_mermaid_renderer_unit.py  test_pipeline_fetcher.py  test_prerequisites.py  test_project_visualisation.py  test_renderer.py  test_sanitiser.py  test_sieve.py  test_snap_resolver.py  test_state.py  test_status.py  test_visualisation_scale.py  test_visualise_cli_scale.py
