[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goldilocks"
version = "0.1.0"
description = "Semantic topology for integration pipelines"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Hélène Martin" }
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "requests>=2.28.0",
]

keywords = [
    "snaplogic",
    "pipeline",
    "neo4j",
    "mermaid",
    "cli",
    "graph",
    "knowledge-graph",
    "dag",
    "airflow",
    "etl"
]

[project.scripts]
goldilocks = "pie:app"

[project.urls]
Homepage = "https://goldilocks-cli.org"
Repository = "https://github.com/Helene-Garance-Martin/goldilocks"

[tool.setuptools]
py-modules = ["pie"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "commands*",
    "src*"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]