[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goldilocks-curls"
version = "0.2.0"
description = "Semantic topology for integration pipelines"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Hélène Martin" }
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "requests>=2.28.0",
    "anthropic>=0.40.0",
    "pyperclip>=1.8.0",
]

keywords = [
    "snaplogic",
    "pipeline",
    "neo4j",
    "mermaid",
    "cli",
    "graph",
    "knowledge-graph",
    "dag",
    "airflow",
    "etl"
]

[project.scripts]
goldilocks = "goldilocks_cli.cli:app"

[project.urls]
Homepage = "https://goldilocks-cli.org"
Repository = "https://github.com/Helene-Garance-Martin/goldilocks"

[tool.setuptools.packages.find]
where = ["."]
include = ["goldilocks_cli*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
